update docker-compose.yml with domain names and update scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+name: Layer8
 
 services:
   forward-proxy:
@@ -5,14 +6,21 @@ services:
     container_name: forward-proxy
     ports:
       - "6191:6191"
+    hostname: fp
+    domainname: layer8.com
     env_file:
       - ./forward-proxy/.env
+    volumes:
+      - ./logs/forward-proxy.log:/var/log/layer8/log.txt
     restart: on-failure
     stdin_open: true
     tty: true
     networks:
       layer8-network:
         ipv4_address: 10.10.10.101
+    extra_hosts:
+      - "rp.layer8.com:10.10.10.102"
+      - "auth.layer8.com:10.10.10.103"
 
   reverse-proxy:
     image: dtpthao/reverse-proxy:0.1.0
@@ -21,6 +29,10 @@ services:
       - ./reverse-proxy/.env
     ports:
       - "6193:6193"
+    hostname: rp
+    domainname: layer8.com
+    volumes:
+      - ./logs/reverse-proxy.log:/var/log/layer8/log.txt
     restart: on-failure
     stdin_open: true
     tty: true
@@ -35,6 +47,8 @@ services:
       - ./auth-server/.env
     ports:
       - "5001:5001"
+    hostname: auth
+    domainname: layer8.com
     command: ["./main"]
     depends_on:
       auth-postgres:
