replace ips by service/container names

--- a/auth-server/.env.dev
+++ b/auth-server/.env.dev
@@ -4,7 +4,7 @@ MP_123_SECRET_KEY=secret_123
 JWT_SECRET_KEY=ThisIsASecret
 
 DB_NAME=development
-DB_HOST=10.10.10.106
+DB_HOST=auth-postgres
 DB_PORT=5432
 DB_USER=layer8development
 DB_PASSWORD=cRACtIeRChYsiNFinuMp
@@ -18,14 +18,14 @@ LAYER8_EMAIL_DOMAIN=layer8proxy.net
 VERIFICATION_CODE_VALIDITY_DURATION=10m
 GENERATE_NEW_ZK_SNARKS_KEYS=true
 
-INFLUXDB_URL=http://10.10.10.104:8086
+INFLUXDB_URL=http://auth-influxdb2:8086
 INFLUXDB_URL_TELEGRAF=http://host.docker.internal:8086
 INFLUXDB_USERNAME=admin
 INFLUXDB_PASSWORD=somethingthatyoudontknow
 INFLUXDB_ORG=layer8
 INFLUXDB_BUCKET=layer8
 INFLUXDB_TOKEN=DEFAULT_TOKEN_FOR_TESTING
-OTEL_EXPORTER_OTLP_ENDPOINT=10.10.10.105:4317
+OTEL_EXPORTER_OTLP_ENDPOINT=auth-telegraf:4317
 
 CREATE_TEST_USER=true
 TEST_USER_EMAIL=test@layer8proxy.net
@@ -41,7 +41,7 @@ TEST_CLIENT_NAME=layer8
 TEST_CLIENT_USERNAME=layer8
 TEST_CLIENT_PASSWORD=12341234
 TEST_CLIENT_REDIRECT_URI=http://localhost:5173/oauth2/callback
-TEST_CLIENT_BACKEND_URI=http://10.10.10.102:6193
+TEST_CLIENT_BACKEND_URI=http://reverse-proxy:6193
 
 SCRAM_ITERATION_COUNT=4096
 
