--- a/reverse-proxy/.env.dev
+++ b/reverse-proxy/.env.dev
@@ -8,7 +8,7 @@ LOG_LEVEL=trace
 LOG_PATH=console
 
 # Handler configuration
-NTOR_SERVER_ID=http://10.10.10.102:6193
+NTOR_SERVER_ID=http://reverse-proxy:6193
 NTOR_STATIC_SECRET="this is 32-byte nTorStaticSecret"
 JWT_VIRTUAL_CONNECTION_SECRET="this is 32-byte rp's jwt secret."
 JWT_EXP_IN_HOURS=24
