update images versions

--- a/forward-proxy/.env.dev
+++ b/forward-proxy/.env.dev
@@ -14,6 +14,7 @@ AUTH_ACCESS_TOKEN=eyJhbGciOiJIUzI1NiJ9.eyJleHAiOjE5MTYyMzkwMjIsInVzZXJfaWQiOiIxM
 AUTH_GET_CERTIFICATE_URL=http://10.10.10.103:5001/sp-pub-key?backend_url=
 
 # mTLS configurations
+ENABLE_TLS=false
 PATH_TO_CA_CERT="/usr/local/certs/generated/ca.pem"
 PATH_TO_CERT="/usr/local/certs/generated/forward_proxy.pem"
 PATH_TO_KEY="/usr/local/certs/generated/forward_proxy-key.pem"
