--- a/reverse-proxy/.env.dev
+++ b/reverse-proxy/.env.dev
@@ -16,6 +16,7 @@ FORWARD_PROXY_URL=http://forward-proxy:6191
 BACKEND_URL=http://host.docker.internal:3000
 
 # TLS configuration
+ENABLE_TLS=false
 PATH_TO_CA_CERT="/usr/local/certs/generated/ca.pem"
 PATH_TO_CERT="/usr/local/certs/generated/reverse_proxy.pem"
 PATH_TO_KEY="/usr/local/certs/generated/reverse_proxy-key.pem"
