--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ name: Layer8
 
 services:
   forward-proxy:
-    image: dtpthao/forward-proxy:0.3.0
+    image: dtpthao/forward-proxy:latest
     container_name: forward-proxy
     ports:
       - "6191:6191"
@@ -23,7 +23,7 @@ services:
       - "auth.layer8.com:10.10.10.103"
 
   reverse-proxy:
-    image: dtpthao/reverse-proxy:0.3.0
+    image: dtpthao/reverse-proxy:latest
     container_name: reverse-proxy
     env_file:
       - ./reverse-proxy/.env
@@ -41,7 +41,7 @@ services:
         ipv4_address: 10.10.10.102
 
   auth-server:
-    image: layer8server/auth_image:0.3.6
+    image: layer8server/auth_image:0.3.7
     container_name: auth-server
     env_file:
       - ./auth-server/.env
@@ -125,7 +125,7 @@ services:
         ipv4_address: 10.10.10.106
 
   auth-setup:
-    image: layer8server/auth_image:0.3.6
+    image: layer8server/auth_image:0.3.7
     container_name: auth-setup
     environment:
       - DB_SETUP_MIGRATION_PATH=./migrations
