add demo spa services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,6 +144,44 @@ services:
         ipv4_address: 10.10.10.107
     restart: "no"
 
+  spa-backend:
+    image: dtpthao/spa-backend:latest
+    container_name: spa-backend
+    environment:
+      - HOST=0.0.0.0
+      - PORT=3000
+      - JWT_SECRET=spa-backend-jwt-secret
+      - LAYER8_URL=http://localhost:5001
+      - LAYER8_CALLBACK_URL=http://localhost:5173/oauth2/callback
+      - LAYER8_RESOURCE_URL=http://localhost:5001/api/user
+      - LAYER8_UUID=26d6f8b5-9438-4556-872b-d60535d8d3c8
+      - LAYER8_SECRET=4a73983ffd5fecfd8f6f2792121a6658
+    ports:
+      - "3000:3000"
+    restart: on-failure
+    stdin_open: true
+    tty: true
+    networks:
+      layer8-network:
+        ipv4_address: 10.10.10.108
+
+  spa-frontend:
+    image: dtpthao/spa-frontend:latest
+    container_name: spa-frontend
+    environment:
+      - HOST=0.0.0.0
+      - PORT=5173
+      - VITE_BACKEND_URL=http://10.10.10.102:6193
+      - VITE_FORWARD_PROXY_URL=http://localhost:6191
+    ports:
+      - "5173:5173"
+    restart: on-failure
+    stdin_open: true
+    tty: true
+    networks:
+      layer8-network:
+        ipv4_address: 10.10.10.109
+
 networks:
   layer8-network:
     driver: bridge
