--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 **/.env
 auth-server/influxdb2-data
 auth-server/pg-data
+
+/scripts/mtls/*.pem
+/scripts/mtls/*.key
+/scripts/mtls/*.crt
+/scripts/mtls/*.csr
+/scripts/mtls/*.srl
